# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
# $Id: ChangeLog,v 1.796.2.146 2005/08/20 17:24:30 jstubbs Exp $

  MAJOR CHANGES in 2.0.51:
    1. /var/cache/edb/virtuals is no longer used at all. It's calculated now.
    2. /var/cache/edb/world is now /var/lib/portage/world.
    3. /etc/portage/profile/virtuals is _USER_ configs only.

  18 Sep 2005; Mike Frysinger <vapier@gentoo.org> bin/etc-update:
  Make sure diff works before checking config files #48184.

  08 Sep 2005; Brian Harring <ferringb@gentoo.org> bin/ebuild.sh: Fixed 
  unpack so that it actually works now.  ${tarvars} placement was a bit 
  wrong, which is odd considering it shouldn't have changed.

  08 Sep 2005; Jason Stubbs <jstubbs@gentoo.org> bin/emerge: Only warn on
  removal of system virtuals if there is only one satisfying package.

  21 Aug 2005; Jason Stubbs <jstubbs@gentoo.org> bin/ebuild.sh: Skip protecting
  ownership of symlinks. Patch by truedfx #94199

  14 Aug 2005; Mike Frysinger <vapier@gentoo.org> bin/prepstrip:
  Don't try to strip if `file` failed #102499 by Daniel Drake.

  10 Aug 2005; Mike Frysinger <vapier@gentoo.org> bin/quickpkg:
  Call gawk instead of awk so non-GNU systems work #102050 by Stephen Bennett.
  Also clean up the script a bit.

  08 Aug 2005; Brian Harring <ferringb@gentoo.org> bin/ebuild.sh:
  fixed bug #101035 , basically checking pipestatus during unpack for 
  piped unpacks.

  07 Aug 2005; Mike Frysinger <vapier@gentoo.org> bin/ebuild.sh:
  Add support for unpacking rar archives.

  04 Aug 2005; Brian Harring <ferringb@gentoo.org> bin/emerge: 
  bug 64585, sanity check on cache cleansing.

  04 Aug 2005: Brian Harring <ferringb@gentoo.org> bin/emerge:
  It's not perfect, but a fix for bug #96410.  A better fix would be 
  to get the categories limiter out of settings...

  29 Jul 2005; Mike Frysinger <vapier@gentoo.org> bin/doman:
  Back port from portage HEAD:
  Remove old unused options (-x11/-gnome/-kde/etc...) and cleanup.
