@@ -7,6 +7,9 @@
     2. /var/cache/edb/world is now /var/lib/portage/world.
     3. /etc/portage/profile/virtuals is _USER_ configs only.
 
+  20 Sep 2005; Brian Harring <ferringb@gentoo.org> pym/portage.py:
+  Cleanup after python, remove module from sys.modules that was a failed import.
+
   18 Sep 2005; Mike Frysinger <vapier@gentoo.org> bin/etc-update:
   Make sure diff works before checking config files #48184.
 
